SA - 3.1.1.1 8/16/2021
- Updated language list
- Fix 'Esc' key to cancel progress status bar
- Fix phonemic and phonetic pronunciations in the LIFT export feature.
- Fixed double-quote '"' problem when saving file names.
- Developer Changes:
    - Create parse-langtags tool to generate language list
    - Fix test sample paths for unit tests.
    - Get xerces dependency as nuget package.
    - Updated SA project and dependencies so that it is now built with Microsoft Visual Studio 2019.

SA - 3.1.0.148 9/1/2018
-Fixed bug where Play and Stop buttons on Start dialog weren't restored after playback completed.
-Removed MBROLA feature.

SA - 3.1.0.147 8/28/2018
- Fixed bug where the 'Open' and 'Open Startup' dialog boxes were not able to play .mp3 files.

SA - 3.1.0.146 3/23/2018
- Fixed mini-caption bar rendering issues that occurs when Windows Themes are changed to 'classic' mode. 
- Fixed mini-caption bar rendering issues that occur when window is minimized.  When minimized, the window now uses the 'Normal' format in all cases (e.g. without/without caption, no caption, etc).
- Fixed mini-caption bar rendering issues that occur when window as in use.  Some edges were not properly calculated causing display problems.
- Fixed bug that causes the Gloss Transcription bar to be displayed when performing 'Tools/Automatic Markup/Locate Words...'

SA - 3.1.0.145 3/5/2018
- Fixed a bug where for 'Tools/Automatic Markup/Locate Words...' that when Gloss English segments are created, they are created without a delimiter ('#').  When you attempt then edit the transcription, the first letter typed becomes the WORD('#') or BOOKMARK ('!') delimiter.
- Fixed a bug where a crash occurs after editing a lone phonetic segment with the transcription dialog editor, and then deleting the segment.  The segment must be the only segment in the document.
- Fixed a bug where the SaServer was not observing the 'start' position for the 'PLAY' batch command.  The value was always treated as zero.