@@ -3289,6 +3289,12 @@ MENUITEM "Up Item\tAlt+Up", ID_EDIT_UP
 MENUITEM "Down Item\tAlt+Down", ID_EDIT_DOWN
 END
 MENUITEM SEPARATOR
+POPUP "Select Graph"
+BEGIN
+MENUITEM "Next Graph\tCtrl+Down", ID_NEXT_GRAPH
+MENUITEM "Previous Graph\tCtrl+Up", ID_PREVIOUS_GRAPH
+END
+MENUITEM SEPARATOR
 MENUITEM "&Find...\tCtrl+F", ID_EDIT_FIND
 MENUITEM "Find &Next...\tF3", ID_EDIT_FIND_NEXT
 MENUITEM "&Replace...", ID_EDIT_REPLACE
@@ -4212,6 +4218,8 @@ VK_RETURN, ID_RESTART_PROCESS, VIRTKEY, NOINVERT
 VK_INSERT, ID_EDIT_COPY, VIRTKEY, CONTROL, NOINVERT
 VK_LEFT, ID_EDIT_CURSOR_START_LEFT, VIRTKEY, CONTROL, NOINVERT
 VK_RIGHT, ID_EDIT_CURSOR_START_RIGHT, VIRTKEY, CONTROL, NOINVERT
+VK_UP, ID_PREVIOUS_GRAPH, VIRTKEY, CONTROL, NOINVERT
+VK_DOWN, ID_NEXT_GRAPH, VIRTKEY, CONTROL, NOINVERT
 "X", ID_EDIT_CUT, VIRTKEY, CONTROL, NOINVERT
 "F", ID_EDIT_FIND, VIRTKEY, CONTROL, NOINVERT
 "H", ID_EDIT_MERGE, VIRTKEY, CONTROL, NOINVERT
