@@ -1,3 +1,6 @@
+# SA - 3.1.1.2 9/7/2021
+- Add shortcut keys for Ctrl-Down and Ctrl-Up to select next/previous graph.
+
 # SA - 3.1.1.1 8/16/2021
 - Updated language list
 - Fix 'Esc' key to cancel progress status bar
